--- a/exercise01/style.css
+++ b/exercise01/style.css
@@ -9,3 +9,25 @@ body {
 /*
 Add some style blocks below this line to style the card.
 */
+
+section {
+    border: 1px solid gray;
+    width: 25%;
+}
+
+h2 {
+    margin: 5%;
+}
+
+img {
+    width:100%;
+    height:100%;
+}
+
+p {
+    margin: 5%;
+}
+
+button {
+    margin: 5%;
+}
